infrastructure/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: the-website
  namespace: gitops-demo
spec:
  ingressClassName: nginx
  rules:
  - host: the-website.local
    http:
      paths:
      - backend:
          service:
            name: the-website
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
